# tako-v2

./: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATION_RESULTS.md  ORG_REPO_GUIDE.md  PHASE2_RESULTS.md  PRIVATE_COLAB_SUMMARY.md  pyproject.toml
config/: othello.yaml  tictactoe.yaml
games/: __init__.py  base.py  othello.py  tictactoe.py
model/: __init__.py  act.py  heads.py  hrm.py  modules.py  transformer.py
notebooks/: 00_setup_and_benchmark.ipynb  01_train_tictactoe.ipynb  02_evaluate_model.ipynb  COLAB_GPU_FIX.md  FIXED_CLONE_CELL.py  ORG_REPO_SETUP.md  PRIVATE_REPO_SETUP.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  benchmark.ipynb  eval.ipynb  play.ipynb  setup.ipynb  train.ipynb
scripts/: benchmark_phase2.py  benchmark_tictactoe.py  eval.py  train.py
tests/: __init__.py  test_games.py  test_hrm.py  test_integration.py  test_mcts.py  test_minimax.py  test_replay_buffer.py  test_tictactoe.py
training/: __init__.py  evaluator.py  learner.py  mcts.py  minimax.py  replay_buffer.py  worker.py
